--- a/searcher/src/test/resources/application.properties
+++ b/searcher/src/test/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 
+spring.jpa.show-sql=true
 spring.jpa.properties.show.sql=true
 spring.jpa.properties.hibernate.sql.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.connection.charset=UTF-8
