--- a/searcher/src/test/resources/application.properties
+++ b/searcher/src/test/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=com.github.config.test
 spring.profiles.include=com.github.config.test
 
 #Datasource configuration
-spring.datasource.url=jdbc:tc:postgresql://criteria-test
+spring.datasource.url=jdbc:tc:postgresql:11.1://criteria-test
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
