--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <hikari-pool-version>2.4.5</hikari-pool-version>
         <release-plugin-version>2.5.3</release-plugin-version>
         <testcontainers.version>1.14.3</testcontainers.version>
+        <jacoco.version>0.8.7</jacoco.version>
     </properties>
 
     <dependencies>
