--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -33,7 +33,7 @@ jobs:
         id: trivy-scan
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: redis:latest
+          image-ref: quay.io/keycloak/keycloak:17.0.0-legacy
           format: 'sarif'
           exit-code: '1'
           ignore-unfixed: true
