--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,13 +12,8 @@
 name: "Trivy"
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ master ]
   schedule:
-    - cron: '16 21 * * 6'
+    - cron: '*/5 * * * *'
 
 jobs:
   analyze:
