--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -47,5 +47,5 @@ jobs:
           webhook_url: https://teams.microsoft.com/l/channel/19%3a2721bc3f27be4731b3d47d79424bd7de%40thread.tacv2/notification%2520test?groupId=06d43c3e-0efd-4a45-88ca-a8806d8c726b&tenantId=0ae51e19-07c8-4e4b-bb6d-648ee58410f4
           needs: ${{ toJson(needs) }}
           job: ${{ toJson(job) }}
-          raw: "{ 'name': 'trivy scanner notification','result':'has failure steps'}"
+          overwrite: "{ 'name': 'trivy scanner notification','result':'has failure steps'}"
           dry_run: True
