--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,6 +34,11 @@ jobs:
           vuln-type: 'os,library'
           severity: 'MEDIUM' 
           output: 'result.sarif'
+          exit-code: '1'
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: 'result.sarif'  
           
       - name: Microsoft Teams Notification
         uses: skitionek/notify-microsoft-teams@master
