--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,17 +34,18 @@ jobs:
           vuln-type: 'os,library'
           severity: 'MEDIUM' 
           output: 'result.sarif'
+          exit-code: '1'
       - name: Pring scan status
         run: echo ${{ steps.trivy-scan.outputs.status }}
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v1
-        if: steps.trivy-scan.outputs.status == 'failure'
+        if: failure()
         with:
           sarif_file: 'result.sarif'  
           
       - name: Microsoft Teams Notification
         uses: skitionek/notify-microsoft-teams@master
-        if: steps.trivy-scan.outputs.status == 'failure'
+        if: failure()
         with:
           webhook_url: https://teams.microsoft.com/l/channel/19%3a2721bc3f27be4731b3d47d79424bd7de%40thread.tacv2/notification%2520test?groupId=06d43c3e-0efd-4a45-88ca-a8806d8c726b&tenantId=0ae51e19-07c8-4e4b-bb6d-648ee58410f4
           needs: ${{ toJson(needs) }}
