--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,11 +29,12 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: adoptopenjdk/openjdk11:jre11u-2022-02-11-03-47-beta-nightly
-          format: 'table'
+          format: 'template'
+          template: '@contrib/html.tpl'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'MEDIUM' 
-          output: 'result.json'
+          output: 'result.html'
           exit-code: '1'
       - name: Pring scan status
         run: echo ${{ steps.trivy-scan.outputs.status }} 
