--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,8 +29,8 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: adoptopenjdk/openjdk11:jre11u-2022-02-11-03-47-beta-nightly
-          format: 'template'
-          template: '@contrib/html.tpl'
+          format: 'html'
+          template: 'https://github.com/aquasecurity/trivy/blame/main/contrib/html.tpl'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'MEDIUM' 
