--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,12 +29,10 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: adoptopenjdk/openjdk11:jre11u-2022-02-11-03-47-beta-nightly
-          format: 'html'
-          template: 'https://github.com/aquasecurity/trivy/blame/main/contrib/html.tpl'
+          format: 'table'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'MEDIUM' 
-          output: 'result.html'
           exit-code: '1'
       - name: Pring scan status
         run: echo ${{ steps.trivy-scan.outputs.status }} 
